fix: clean up spacing and styles in page layout and add new CSS classes for card and testimonial sections

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -183,6 +183,10 @@ img {
   box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.25);
 }
 
+.card-number {
+  padding: 5.5px 16px 5.5px 16px;
+}
+
 /* Category Section */
 .category {
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
@@ -194,8 +198,15 @@ img {
 }
 
 /* Testimonial section */
+.testimonial-slider {
+  padding-bottom: 5px;
+  padding-top: 5px;
+}
 
 /* NewsLetter section */
+.newsletter-input-shadow {
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.25);
+}
 
 /* Footer */
 .social-icons aspect-square Image {
